reorganizing to accommodate future courses, building out assignments and stuff

--- a/_posts/2014-01-21-week1.md
+++ b/_posts/2014-01-21-week1.md
@@ -1,7 +1,7 @@
 ---
 layout: default
 permalink: LIS_861_Spring_2014/week1.html
-title: Week 1 &mdash; HTML basics
+title: Week 1 (Jan 21-Jan 26) &mdash; HTML basics
 ---
 #####Key questions
 > How do I get HTML from my brain to my computer to my browser?
@@ -27,15 +27,21 @@ Zeldman.  Before you Begin, Ch. 1-2, 5-6, 8
 #####Assignment
 * Introduce yourself in the Introductions forum, and read your classmates'
   and instructor's introductions.
-* Make sure you have a text editor (install one if necessary).
+* Make sure you have a text editor. If you don't (or don't know what a text
+  editor is or how it differs from a word processor), install one, using the 
+  "Installing a text editor" instructions above.
 * Make sure you can edit and save an HTML file in a text editor and view it in
-  your browser. _If you cannot do this, ask questions ASAP._
+  your browser. If you don't know how to do this, read _Head First HTML_, Chapter 
+  1.
+* If you've followed the text editor instructions, read Chapter 1, and you
+  still can't edit and save an HTML file and view it in your browser, _ask 
+  questions ASAP._ You can ask anonymously in the help forum if you prefer.
 * Make sure you know where to find developer tools in your browser. _If you 
   cannot do this, ask questions ASAP._
 * If any unfamiliar terms or concepts in Zeldman are unfamiliar to you, ask 
   questions in the Unfamiliar Terms? thread of the Week 1 discussion forum.
 * Answer the other questions in the Week 1 discussion forum.
 * We're all in this together, so make sure your classmates' questions get
-  answered.  If you know the answers already, great! If you don't, use your
+  answered.  If you know the answers already, great. If you don't, use your
   ninja-like reference skills to help find answers (don't forget to explain
   your search strategy!).
