rest of week 1 updates, except waiting on videos to convert

--- a/_posts/2014-01-21-week1.md
+++ b/_posts/2014-01-21-week1.md
@@ -16,9 +16,10 @@ If needed: [Installing a text editor](https://openhatch.org/wiki/Boston_Python_W
 
 If needed: _Head First HTML_, Ch. 1
 
-Basic HTML video (in Learn@UW)
+Basic HTML video (link coming soon)
 
-Developer Tools video (in Learn@UW)
+Developer Tools video (link coming soon)
+
 
 Zeldman.  Before you Begin, Ch. 1-2, 5-6, 8
 
