--- a/_posts/2014-01-27-week2.md
+++ b/_posts/2014-01-27-week2.md
@@ -3,7 +3,7 @@ layout: default
 permalink: LIS_861_Spring_2014/week2.html
 title: Week 2 (Jan 27-Feb 2) &mdash; More fun with HTML
 ---
-<em>TBD</em>
+<em>Cancelled due to family emergency</em>
 <!--
 #####Key questions
 #####To read/watch
