--- a/_posts/2014-02-03-week3.md
+++ b/_posts/2014-02-03-week3.md
@@ -3,11 +3,67 @@ layout: default
 permalink: LIS_861_Spring_2014/week2.html
 title: Week 3 (Feb 3-Feb 9) &mdash; CSS basics
 ---
-<em>TBD</em>
-<!--
 #####Key questions
+> How do I add styling to an HTML file with CSS?
+
+> How can I learn the basics of good web design, even if I'm not a designer?
+
+> What are some of the deeper concepts that web design can provoke us to think about, and what can we learn from them about how to build better web experiences?
+
 #####To read/watch
 ######Required
+[What Screens Want](http://frankchimero.com/what-screens-want/)
+
+Zeldman, Ch. 9, 10, 12, 13 (just the first section, "On Typography")
+
+[design seeds](http://design-seeds.com/) and [Adobe Kuler](https://kuler.adobe.com/)
+> If you have a great sense of color, you can skip design seeds, though you might find it fun anyway.  
+> Kuler will help you generate reasonable color schemes if you don't have a strong
+> color sense; even if you do, you might find the hex codes useful.
+
+[Google webfonts](http://www.google.com/webfonts)
+> Play around with this: search for some fonts that might be good for headers
+> and for body text, add a few to your collection, and make sure you know where
+> to copy-paste the code you need to use them.
+
 ######Optional
+[The Elements of Typographic Style Applied to the Web](http://webtypography.net)
+
+_The Non-Designer's Design Book_
+> As a non-designer, I found this book VERY illuminating and empowering; it lays
+> out simple rules you can use to make good choices even if you don't have an
+> instinct for art.
+
+_The Design of Everyday Things_
+> A genuine classic of design and user experience that will change the way you
+> see the world around you. Worth reading for its notion of "affordances" alone.
+  
+_Literary Machines_
+> A weird, quirky, brilliant book unlike anything you've ever read. The
+> origin of hypertext. Available on campus at UW; may be hard to find elsewhere,
+> but it's worth ILLing.
+
+[Useful CSS](http://miriamposner.com/blog/wp-content/uploads/2011/11/usefulcss.pdf)
+> A helpful cheat sheet for the CSS you'll use most often.
+
+[Less](http://lesscss.org/) and/or [SASS](http://sass-lang.com/)
+> If you're comfortable with CSS, and especially if you've run into headaches
+> trying to maintain stylesheets for large sites, these will change your
+> whole workflow, and it'll be great. Bootstrap, which we'll see next week, is
+> Less-based.
+
+Zeldman, Ch. 11
+> Read if you're interested in what's up with doctype declarations, the details of 
+> browser incompatibility, the history behind these things, and why designing for 
+> earlier Internet Explorer versions will make you want to pull your hair out.
+
 #####Assignment
--->
+* Do the required readings.
+* Answer the questions in the Week 3 discussion forum in Learn@UW.
+* We're all in this together, so make sure your classmates' questions get
+  answered.  If you know the answers already, great. If you don't, use your
+  ninja-like reference skills to help find answers (don't forget to explain
+  your search strategy!).
+* Make sure you've read and gotten started on [Assignment 1](./assignments/web_site_version_1.html), due __February 24__:
+  you now know everything you need to know to complete it, except responsive
+  design.
