--- a/_posts/2014-02-03-week3.md
+++ b/_posts/2014-02-03-week3.md
@@ -59,6 +59,8 @@ Zeldman, Ch. 11
 
 #####Assignment
 * Do the required readings.
+* Make sure you can define the following: skeuomorphism, wireframes, dark 
+  patterns, bandwidth-friendly, inheritance (in a CSS context), box model, float.
 * Answer the questions in the Week 3 discussion forum in Learn@UW.
 * We're all in this together, so make sure your classmates' questions get
   answered.  If you know the answers already, great. If you don't, use your
