--- a/_posts/2014-02-10-week4.md
+++ b/_posts/2014-02-10-week4.md
@@ -3,11 +3,66 @@ layout: default
 permalink: LIS_861_Spring_2014/week2.html
 title: Week 4 (Feb 10-Feb 16) &mdash; Bootstrap and Responsive Web Design
 ---
-<em>TBD</em>
-<!--
 #####Key questions
+> What is responsive web design and why do we care?
+
+> What are some of the differences _besides styling_ that go into designing for
+> mobile? What problems does responsive web design solve, and what problems
+> _doesn't_ it solve?
+
+> How do you apply Bootstrap's CSS elements to a web site and perform basic
+> customizations?
+
+> How does RWD fit into the big picture of usability? (We'll come back to this
+> later.)
+
+<!--
 #####To read/watch
 ######Required
+[Responsive Web Design](http://alistapart.com/article/responsive-web-design)  
+> _The_ foundational article for RWD: this is where it got started.
+
+[Bootstrap documentation](http://getbootstrap.com/)  
+> This is a _reference work_, so you don't need to read it comprehensively.
+> Instead, skim it (especially the Getting Started page) to learn what your
+> options are, and then solidify your understanding by building a basic Bootstrap
+> page from one of the templates and the available CSS components. (You don't
+> need to use the JS components now, although if you were familiar with HTML and/
+> or programming before the course, they're a good way to extend your knowledge.
+> We'll come back to them.)
+> If you haven't read a lot of tech documentation, pick one component. Then either
+> read about in-depth and then build it, or build and then read its documentation
+> in more depth as needed -- whichever style works better for you -- going back
+> and forth between reading and building until the component works. The 
+> documentation may not make total sense until you've built the thing, and that's
+> okay.
+
+[Responsive Web Design for Libraries](http://matthew.reidsrow.com/articles/23)  
+> You can download the slides as PDF from this page, but you may find
+> [the SpeakerDeck version](https://speakerdeck.com/matthewreidsma/responsive-web-design-for-libraries-get-beyond-the-myth-of-the-mobile-web-1)
+> faster.
+
+[Control Issues](http://matthew.reidsrow.com/articles/19)
+
+[Responsive Design Won’t Fix Your Content Problem](http://alistapart.com/column/responsive-design-wont-fix-your-content-problem)
+
+[Cell Internet Use 2013](http://pewinternet.org/Reports/2013/Cell-Internet.aspx)  
+> Read the full report, particularly the demographics of cell-mostly vs 
+> desktop-mostly users.
+
+
+[Smartphone Ownership 2013](http://pewinternet.org/Reports/2013/Smartphone-Ownership-2013.aspx)
+> Read the full report.
+
 ######Optional
+Hanson, Ch. 3.
+
+Clark, Ch. 5.
+
+[A Dao of Web Design](http://alistapart.com/article/dao)
+
+The example sites available at [Bootstrap](http://getbootstrap.com/) (use your
+dev tools to analyze them!)
+
 #####Assignment
 -->
