--- a/_posts/2014-02-10-week4.md
+++ b/_posts/2014-02-10-week4.md
@@ -29,7 +29,7 @@ title: Week 4 (Feb 10-Feb 16) &mdash; Bootstrap and Responsive Web Design
 > need to use the JS components now, although if you were familiar with HTML and/
 > or programming before the course, they're a good way to extend your knowledge.
 > We'll come back to them.)  
-> If you haven't read a lot of tech documentation, pick one component. Then either
+> If you haven't read a lot of tech documentation before, here's how: pick one component. Then either
 > read about in-depth and then build it, or build and then read its documentation
 > in more depth as needed -- whichever style works better for you -- going back
 > and forth between reading and building until the component works. The 
