--- a/_posts/2014-02-10-week4.md
+++ b/_posts/2014-02-10-week4.md
@@ -63,6 +63,8 @@ Clark, Ch. 5.
 The example sites available at [Bootstrap](http://getbootstrap.com/) (use your
 dev tools to analyze them!)
 
-<!--
 #####Assignment
--->
+* Do the required readings/viewing.
+* Answer questions in the Week 4 discussion forums.
+* Make sure you've read and gotten started on [Assignment 1](./assignments/web_site_version_1.html), due __February 24__:
+  you now know everything you need to know to complete it.
