--- a/_posts/2014-02-10-week4.md
+++ b/_posts/2014-02-10-week4.md
@@ -54,6 +54,11 @@ title: Week 4 (Feb 10-Feb 16) &mdash; Bootstrap and Responsive Web Design
 > Read the full report.
 
 ######Optional
+If you need to see CSS in action, I've made a few videos for you (screenshots
+of my applying CSS to the HTML file from week 1). 
+[CSS Selectors](https://vimeo.com/86024422), [CSS Box model](https://vimeo.com/86050364),
+[CSS Font Styling and Google Fonts](https://vimeo.com/86051223)
+
 Hanson, Ch. 3.
 
 Clark, Ch. 5.
