week 5 bibliography and include complete

--- a/_posts/2014-02-17-week5.md
+++ b/_posts/2014-02-17-week5.md
@@ -5,10 +5,66 @@ title: Week 5 (Feb 17-Feb 23) &mdash; CMSes
 ---
 <p class="bold_red"><em>Due end of week:</em> Web site version 1.0</p>
 <em>TBD</em>
-<!--
 #####Key questions
+> What is a content management system and why do we care?  
+> How can you evaluate whether a CMS and its plugins meet your needs?  
+> What are some of the nontechnical issues raised by large web projects?
+
 #####To read/watch
 ######Required
+Byron et al., Ch.1, 2, 7, and Appendix B  
+> Use [opensourcecms.com](http://opensourcecms.com) (or your own Drupal
+> installation) to actually do the hands-on sections in Ch. 2. You won't be
+> able to do all the hands-on parts of Ch. 7 without your own installation that
+> includes the relevant modules; just do what you can.
+
+Varnum, Ch. 1
+    
+Jones & Farrington, Ch. 2 and 3
+
+At least one of the Done in WordPress blog series (Goodman 2013):
+* [Madison (NH) Local Library History](http://www.alatechsource.org/blog/2013/12/done-in-wordpress.html)
+* [Belchertown High School Library](http://www.alatechsource.org/blog/2013/11/done-in-wordpress-belchertown-high-school-library.html)
+* [The Grove Library](http://www.alatechsource.org/blog/2013/11/done-in-wordpress-the-grove-library.html) (a regional public library in Australia)
+* [Scholarly Publishing @ MIT Libraries](http://www.alatechsource.org/blog/2013/10/done-in-wordpress-scholarly-publishing-mit-libraries.html)
+
+[Doing a Content Inventory](http://www.adaptivepath.com/ideas/doing-content-inventory/)
+
+Schmidt & Etches, pp 60-71 (the sections on content audit and content workflow)
+
 ######Optional
+
+Byron et al. (the rest of the book)
+
+Varnum (the rest of the book)
+
+[Drupal Ladder](http://drupalladder.org/)  
+> Walks you through how to contribute to Drupal code and documentation.
+
+[The Drupal community](https://drupal.org/), including its 
+[IRC channels](https://drupal.org/irc) and [meetups](http://drupal.meetup.com/)
+
+[The Drupal4lib mailing list](http://listserv.uic.edu/archives/drupal4lib.html)
+
+[The LITA Drupal4Lib interest group](http://connect.ala.org/node/71787)
+
+Jones & Farrington (the rest of the book)
+
+Goodman (2014)
+
+[WordPress.com](http://wordpress.com)  
+> Get a free blog and mess around with it. (Or install your own from
+> [WordPress.org](http://wordpress.org/)!)
+
+[WordPress Codex](http://codex.wordpress.org/)  
+> The reference manual for WordPress technical support.
+
+[WordPress meetups](http://wordpress.meetup.com/)
+
+Halvorson & Rach
+
+
 #####Assignment
--->
+* Do the readings
+* Answer the questions in the Learn@UW Week 5 forum
+* Don't forget that Assignment 1 is due next Monday!
