terms, twitter handles

--- a/_posts/2014-02-17-week5.md
+++ b/_posts/2014-02-17-week5.md
@@ -65,7 +65,30 @@ Goodman (2014)
 
 Halvorson & Rach
 
+Follow some of the authors of this week's reading on twitter:
+[@webchick](http://twitter.com/webchick) (Angela Byron), 
+[@varnum](http://twitter.com/varnum) (Ken Varnum), 
+[@pollyalida](http://twitter.com/pollyalida) (Polly-Alida Farrington), 
+[@thecorkboard](http://twitter.com/thecorkboard) (Kyle Jones - also a UW student!), 
+[@godaisies](http://twitter.com/godaisies) (Amanda Goodman), 
+[@walkingpaper](http://twitter.com/walkingpaper) (Aaron Schmidt), 
+[@etches](http://twitter.com/etches) (Amanda Etches)
+
 #####Assignment
 * Do the readings
+* Make sure you know what the following terms mean. If there are any you don't 
+  know, do research and/or ask questions until you do: 
+  
+  * open source
+  * dynamic (in the context of a web page)
+  * modules/plugins
+  * PHP
+  * database, MySQL
+  * web server
+  * operating system
+  * RSS feed
+  * deprecated (in the software context)
+  * case-sensitive
+
 * Answer the questions in the Learn@UW Week 5 forum
 * Don't forget that Assignment 1 is due next Monday!
