add video links

--- a/_posts/2014-01-21-week1.md
+++ b/_posts/2014-01-21-week1.md
@@ -16,10 +16,9 @@ If needed: [Installing a text editor](https://openhatch.org/wiki/Boston_Python_W
 
 If needed: _Head First HTML_, Ch. 1
 
-Basic HTML video (link coming soon)
+[Basic HTML video](https://vimeo.com/84643135)
 
-Developer Tools video (link coming soon)
-
+[Developer Tools video](https://vimeo.com/84643016)
 
 Zeldman.  Before you Begin, Ch. 1-2, 5-6, 8
 
