--- a/_posts/2014-02-24-week6.md
+++ b/_posts/2014-02-24-week6.md
@@ -3,11 +3,57 @@ layout: default
 permalink: LIS_861_Spring_2014/week2.html
 title: Week 6 (Feb 24-Mar 2) &mdash; Dynamic content &amp; web programming
 ---
-<em>TBD</em>
-<!--
 #####Key questions
-#####To read/watch
+> What is jQuery and why do we care?
+
+> How can I add some interactivity to my page with jQuery?
+
+> How does the jQuery + CSS combination give us powerful new options?
+
+#####Readings and work
 ######Required
+Read the Week 6 reading in Learn@UW (available in the Content Browser sidebar), 
+containing the How To Read Documentation video and the What is the DOM explanation.
+
+Watch [Lynda.com jQuery for Web Designers](http://www.lynda.com/jQuery-tutorials/jQuery-Web-Designers/144204-2.html): 
+Introduction, part 1 (Introducing jQuery), part 2 (Essential jQuery concepts)
+> You can access this via your UW account: Log in > Log in through your
+> organization or school > type __www.wisc.edu__ in the blank. If you're not
+> already logged in to wisc.edu you'll be asked to do that; otherwise it should
+> just work.  
+> Make sure to do the challenge in part 2. It's okay if your answer differs from
+> his as long as it works; there's usually more than one right answer in 
+> programming.
+
+Post your questions and/or reflections on the Lynda video in the relevant thread
+of the Learn@UW Week 6 forum.
+
+Read the documentation at [api.jquery.com](http://api.jquery.com) for [.slideToggle()](http://api.jquery.com/slideToggle/),
+[.addClass()](http://api.jquery.com/addClass/), [.removeClass()](http://api.jquery.com/removeClass/),
+[.toggleClass()](http://api.jquery.com/toggleClass/), [.css()](http://api.jquery.com/css/)
+
+Add an effect to your HTML page from Assignment 1 with jQuery, and tell us
+about it in the relevant thread of the Week 6 forum.
+> It can be any effect you like, and the page doesn't have to look good when
+> you're done; the goal is to make it _work_.  If you aren't sure where to start, 
+> use .toggleClass() on something that has a class already.
+
+Answer the "what is jQuery and why do we care" question in the Learn@UW Week 6
+forum.
+
 ######Optional
-#####Assignment
--->
+Do you have unresolved questions or nifty insights?  Post to the 'any other 
+questions & reflections' thread.
+
+Read anything else that looks interesting on [api.jquery.com](http://api.jquery.com).
+
+Read anything that looks interesting on [learn.jquery.com](http://learn.jquery.com).
+> There's a ton of great info here, but it assumes that you have some programming
+> experience. You can absolutely still read it if you don't - just be prepared to
+> spend some extra time looking things up and asking questions. It's okay if it
+> doesn't all make sense on the first read-through; it will make more sense as
+> you gain experience.
+
+The UW library is looking for [focus group participants for a web site
+redesign](http://library.wisc.edu/mail/surveyrequest.shtml); you might find this 
+process interesting.
