--- a/_posts/2014-04-14-week12.md
+++ b/_posts/2014-04-14-week12.md
@@ -11,3 +11,22 @@ title: Week 12 (Apr 14-Apr 20) &mdash; Accessibility 1
 ######Optional
 #####Assignment
 -->
+
+{% comment %}
+Note: both Ranti and Cynthia say that making sure you followed accessibility
+guidelines does NOT mean your site is usable.
+
+Make sure to go back and reread their emails.
+
+Cynthia:
+My take is that the following things must be checked, and the tools you use are a matter of preference. All of the ones Ranti recommended are good choices. I've just listed what I personally use.
+
+1. Pages should always validate (this is the most basic thing). I use w3c's validator [8] .
+2. General structure. Use WAVE toolbar's Outline view, text-only view.
+3. Colour contrast. I use Firefox's WCAG Contrast Checker. (Any contrast checker is prone to false positives though, because of the ability to layer elements.)
+4. Keyboard accessibilty. The "tab" key is your friend! On a Mac, you need to change the settings to get the proper behaviour in a browser [9]
+5. Screen reader emulation. I use Firefox's Fangs because I prefer to scan/read. When I used to have a Mac, I would also use VoiceOver to double check some things.
+
+or see http://blog.rantijunus.net/2014/02/02/tools-i-use-when-performing-accessibility-assessment/
+
+{% endcomment %}
