adds accessibility notes and final project assignment descriptions

--- a/_posts/2014-03-24-week9.md
+++ b/_posts/2014-03-24-week9.md
@@ -11,3 +11,25 @@ title: Week 9 (Mar 24-Mar 30) &mdash; Usability basics
 ######Optional
 #####Assignment
 -->
+
+{% comment %}
+Krug reading
+
+Definitely:
+Ch 1-3, 5
+7 on homepages - a fraught thing in libraries (different title in 3rd ed, but
+same basic content, looks like)
+
+8, 9 on testing
+
+make sure to look through the index
+
+Nope
+4
+11 accessibility - probably superseded by better things
+6 for information architecture?? (only if during IA week) (so no; let's find
+something IA-specific)
+
+10 reservoir of goodwill (it's Ch 11 in the 3rd ed)
+
+{% endcomment %}
