--- a/_posts/2014-03-03-week7.md
+++ b/_posts/2014-03-03-week7.md
@@ -3,11 +3,63 @@ layout: default
 permalink: LIS_861_Spring_2014/week2.html
 title: Week 7 (Mar 3-Mar 9) &mdash; Dynamic content &amp; web programming
 ---
-<em>TBD</em>
-<!--
 #####Key questions
-#####To read/watch
-######Required
-######Optional
+> What are the Bootstrap JavaScript components, and how do they give us some new
+> options for interactivity?
+
+> How can we iterate code: make it work or make it better, e.g. by critiquing it 
+> and trying new things?
+
 #####Assignment
--->
+######Required
+Read [Bootstrap JavaScript components](http://getbootstrap.com/javascript/)  
+> Review last weeks' How to Read Documentation video if needed.
+
+Apply a bootstrap.js effect to your HTML page.
+
+Reply to a post (not your own) in last week's Your jQuery Effect thread as follows
+(pick one):
+
+* Find a post with a script (whether it works or not). Describe what you believe 
+  the script is doing, step by step, in English, and ask the original author if 
+  that's accurate.  (If you're the original author, please tell them if they're 
+  right!  If they're not, explain what you were going for. As a bonus, this may 
+  help you understand errors in your code.)  
+* Find a post where someone wants help improving the script and help them out. If 
+  you know exactly what to do, go ahead and explain it or write the code. If you 
+  don't, that's fine too - ask some questions that will help them clarify their 
+  thinking, or find some resources that you think might help them get on the right 
+  track, or explain the half you do know how to solve and ask for help on the half 
+  you don't.
+
+Iterate your jQuery from last week.  If it wasn't working, try a new strategy (get 
+something simpler to work, ask for help and go from there, etc.) If it was, make 
+it do something more complicated.  Post about it to last week's 'Your jQuery 
+Effect' thread.
+
+Read the [final project one-pager](./assignments/one_pager.html) and 
+[final project deliverable](./assignments/final_project.html) assignments. There's
+a Final Projects thread in the Content Browser > Course-wide info area you can
+use to ask questions, propose ideas, and find teammates.
+
+Discuss the Week 7 discussion forum threads.  
+> Except for the questions/reflections thread, *none of these are optional*. If 
+> you're having trouble with your Bootstrap effect, posting about what you've 
+> tried and where you're stuck is a completely legitimate way to participate.
+
+######Optional
+[Lynda.com jQuery Essential Training](http://www.lynda.com/jQuery-tutorials/essential-training/48370-2.html)  
+> I found this more technical than the jQuery for Web Designers class, but you
+> may find it handy to have an additional perspective.
+
+[Building Twitter Bootstrap](http://alistapart.com/article/building-twitter-bootstrap)  
+> Curious how and why Twitter built Bootstrap? Here you go!
+
+[Progressive Enhancement with JavaScript](http://alistapart.com/article/progressiveenhancementwithjavascript)  
+> You can do lots of cool stuff with JS, but possibly at a cost: e.g. making sites
+> slower to load, or less accessible to users who have screenreaders, or who have
+> disabled JavaScript. Progressive enhancement is the idea that the bare-bones
+> version of your site (no JS, no CSS) should _work_, providing access to all the
+> core content and functionality; styling and interactivity are layers on top of
+> that which enhance the experience for other users. This article discusses some
+> of the techniques for doing that.
