--- a/_posts/2014-04-28-week14.md
+++ b/_posts/2014-04-28-week14.md
@@ -11,3 +11,24 @@ title: Week 14 (Apr 28-May 4) &mdash; Project Management
 ######Optional
 #####Assignment
 -->
+
+{% comment %}
+Look for:
+Jenica's ppt on meetings
+Ken's chapter on planning a migration, or similar
+An agile overview (Rosy may find you a good one)
+
+Rosy's talk:
+Rosy will talk about meetings - ways that people do it wrong and how you can
+do it better. It can link out to lots of concepts, like status reports. Agile
+perspective.
+
+Follow-up questions:
+appear.in or similar is fine -- need to think about pros and cons
+collated questions by email is fine too
+
+Notes:
+Tie into organizational change - changing meeting styles can be disruptive.
+Look ahead to stakeholders & buy-in.
+Rosy will send me some readings.
+{% endcomment %}
