updating optional readings

--- a/_posts/2014-03-03-week7.md
+++ b/_posts/2014-03-03-week7.md
@@ -48,6 +48,8 @@ Discuss the Week 7 discussion forum threads.
 > tried and where you're stuck is a completely legitimate way to participate.
 
 ######Optional
+The rest of [Lynda.com jQuery for Web Designers](http://www.lynda.com/jQuery-tutorials/jQuery-Web-Designers/144204-2.html)
+
 [Lynda.com jQuery Essential Training](http://www.lynda.com/jQuery-tutorials/essential-training/48370-2.html)  
 > I found this more technical than the jQuery for Web Designers class, but you
 > may find it handy to have an additional perspective.
