updating due date everywhere

--- a/_posts/2014-03-24-week9.md
+++ b/_posts/2014-03-24-week9.md
@@ -3,6 +3,8 @@ layout: default
 permalink: LIS_861_Spring_2014/week2.html
 title: Week 9 (Mar 24-Mar 30) &mdash; Usability basics
 ---
+<p class="bold_red"><em>Due end of week:</em> Final project one-pager</p>
+
 <em>TBD</em>
 <!--
 #####Key questions
