--- a/_posts/2014-03-10-week8.md
+++ b/_posts/2014-03-10-week8.md
@@ -3,11 +3,73 @@ layout: default
 permalink: LIS_861_Spring_2014/week2.html
 title: Week 8 (Mar 10-Mar 14) &mdash; Information architecture basics
 ---
-<em>TBD</em>
-<!--
 #####Key questions
-#####To read/watch
+> How do users seek information?
+
+> What are some organizational tools that can help (or hinder!) that search?
+
+> How can we evaluate whether a web site's information architecture succeeds in 
+> helping users find stuff?
+
+#####To read/do
 ######Required
+Read:  
+* Morville & Rosenfeld, Chapters 1, 5, 6, 7, 20
+* Carol Kuhlthau's [Information Search Process](http://comminfo.rutgers.edu/~kuhlthau/information_search_process.htm)
+* [Card Sorting: How Many Users to Test](http://www.nngroup.com/articles/card-sorting-how-many-users-to-test/)
+* [Avoid Category Names That Suck](http://www.nngroup.com/articles/category-names-suck/)
+* [Where Am I?](http://alistapart.com/article/whereami)
+* [Home Page Goals](http://alistapart.com/article/homepagegoals), 
+* <em>Prejudices and Antipathies</em> ([Introduction](http://www.sanfordberman.org/prejant/intro.pdf) and [Preface](http://www.sanfordberman.org/prejant/preface.pdf) only)
+* [Flat vs. Deep Website Hierarchies](http://www.nngroup.com/articles/flat-vs-deep-hierarchy/)
+
+Answer the card sorting question in the forums. Come back later and
+see how your classmates answered it; respond to something you find 
+thought-provoking.
+
+Answer one of the following in the Evaluation thread in the Week 8 Discussion
+Forum:
+
+* The articles "Avoid Category Names That Suck", "Where Am I?", and "Home Page Goals" 
+  each give some concrete criteria for evaluating a web page's information
+  architecture.  Pick whichever article you found most interesting, and evaluate a
+  library web page according to those criteria. (Any library is fine.) Tell us 
+  about it.
+* Pick an idea from this week and go to the UW library catalog to learn more about
+  it. Keeping in mind Kuhlthau's ideas and the techniques you've seen this week:
+  what did you encounter that helped your process of selection, exploration, 
+  formulation, and collection?  What hindered it?  Did anything particularly
+  increase, or decrease, either your uncertainty or your anxiety?  Tell us about 
+  it.
+  
 ######Optional
-#####Assignment
--->
+[Optimizing Websites in the Post Panda World](http://www.asis.org/Bulletin/Oct-12/OctNov12_Sweeny.html)
+> Toward the end, suggests some interesting and unconventional clues that may
+> help answer information needs.
+
+The rest of [<em>Prejudices and Antipathies</em>](http://www.sanfordberman.org/prejant.htm)
+
+[What Happens When Architectural Questions Are Not Asked?](http://www.asis.org/Bulletin/Apr-12/AprMay12_Haller.html)
+> A concrete example of how to confuse users via Facebook privacy settings.
+
+[The Design of Browsing and Berrypicking Techniques for the Online Search Interface](http://pages.gseis.ucla.edu/faculty/bates/berrypicking.html)
+> A classic paper on how people think when looking for information.  It challenged
+> conventional wisdom at the time, though its suggestions for how to build
+> interfaces may seem dated today.
+
+[The Anatomy of a Large-Scale Hypertextual Web Search Engine](http://infolab.stanford.edu/pub/papers/google.pdf)
+> A late-1990s paper on using citation analysis (discussed in the berrypicking
+> paper, above) to build a prototype search engine. Google went on to be fairly 
+> well known.
+
+[Folksonomies? How about Metadata Ecologies?](http://louisrosenfeld.com/home/bloug_archive/000330.html)
+and [folksonomies + controlled vocabularies](http://many.corante.com/archives/2005/01/07/folksonomies_controlled_vocabularies.php)
+> Eminent information architect Louis Rosenfeld and internet theorist Clay
+> Shirky argue about the relative values of controlled vocabularies and 
+> folksonomies (vocabularies for organization that emerge from user-defined 
+> labels).
+
+[Any Wikipedia page](http://en.wikipedia.org/wiki/Special:Random)
+> What tools are here to organize information? (Be sure to look at sidebars, if
+> any; tabs; and whatever's toward the bottom of the page. What categories is the
+> page part of? What does Wikipedia tell us about its context or provenance?)
