--- a/_posts/2014-03-24-week9.md
+++ b/_posts/2014-03-24-week9.md
@@ -6,32 +6,77 @@ title: Week 9 (Mar 24-Mar 30) &mdash; Usability basics
 <p class="bold_red"><em>Due end of week:</em> Final project one-pager</p>
 
 <em>TBD</em>
-<!--
 #####Key questions
-#####To read/watch
-######Required
-######Optional
+> What are some key principles of usability?
+
+> What are some usability challenges that library web sites often have?
+
 #####Assignment
--->
+######Required
+Read Krug, Ch. 1-3, 5, 7-9
+
+http://librarian.newjackalmanac.ca/2013/08/user-experience-vs-world.html
+great, great application to a library context. personality. ties into Krug.
+
+http://bradcolbow.com/archive/view/the_brads_why_drm_doesnt_work/?p=205
+(bad usability burns your reservoir of goodwill, and *you have competitors*.
+we no longer live in a world of information scarcity.)
+
+http://escholarship.org/uc/item/3qq499w7#page-2
+Terms library users understand - data!! SO much info on usability testing.
+-> this is long and we need to ask people to extract key lessons from it.
+
+http://www.walkingpaper.org/5979
+redesigning the OPAC around use: things people want to do, rather than records
+of the collection
+
+Schmidt & Etches, Ch 1 (available http://www.alatechsource.org/user-experience-ux-design-for-libraries-18;
+also place on reserve)
+
+######Optional
+The rest of Krug
+
+_The Design of Everyday Things_
+> A widely-cited classic that will change the way you see the world around you.
+
+The rest of Schmidt & Etches
+
+make sure they know about Aaron's "The User Experience" column in LJ:
+http://lj.libraryjournal.com/category/opinion/aaron-schmidt/
+
+http://www.usability.gov/ likewise, only useful with some direction
+
+http://www.slideshare.net/whitneyhess/diy-ux overview of process
+
+http://alistapart.com/article/designcancripple
+shows dramatic effect of small choices
+
+http://matthew.reidsrow.com/articles/16
 
 {% comment %}
-Krug reading
+What are your goals for this week?
+Later: scenarios & personas; testing & tools; accessibility. So this week is not
+those things.
+"features are not benefits"
 
-Definitely:
-Ch 1-3, 5
-7 on homepages - a fraught thing in libraries (different title in 3rd ed, but
-same basic content, looks like)
+The elements of user experience (garrett) - available?
 
-8, 9 on testing
+O'Reilly's Designing Interfaces - you know, I probably want it for myself, though
+it sounds too specific for this use
 
-make sure to look through the index
+Similarly for me: Set Phasers on Stun: And Other True Tales of Design, Technology, 
+and Human Error by Steven Casey
 
-Nope
-4
-11 accessibility - probably superseded by better things
-6 for information architecture?? (only if during IA week) (so no; let's find
-something IA-specific)
+have already had them read Schmidt & Etches, pp 60-71 (the sections on content audit and content workflow)
 
-10 reservoir of goodwill (it's Ch 11 in the 3rd ed)
+http://nform.com/tradingcards/ (only useful if we're going to have people pick
+one and do something with it)
+
+http://www.usability.gov/ likewise, only useful with some direction
+
+http://www.slideshare.net/whitneyhess/diy-ux overview of process
+
+http://alistapart.com/article/designcancripple
+shows dramatic effect of small choices
 
 {% endcomment %}
