--- a/_posts/2014-04-07-week11.md
+++ b/_posts/2014-04-07-week11.md
@@ -12,3 +12,9 @@ title: Week 11 (Apr 7-Apr 13) &mdash; Usability testing &amp; assessment tools
 ######Optional
 #####Assignment
 -->
+
+{% comment %}
+http://matthew.reidsrow.com/articles/13
+how they do usability testing
+
+{% endcomment %}
