--- a/_posts/2014-04-28-week14.md
+++ b/_posts/2014-04-28-week14.md
@@ -31,4 +31,6 @@ Notes:
 Tie into organizational change - changing meeting styles can be disruptive.
 Look ahead to stakeholders & buy-in.
 Rosy will send me some readings.
+
+Varnum and Schmidt & Etches may both have relevant chapters to place on reserve.
 {% endcomment %}
