--- a/_posts/2014-03-24-week9.md
+++ b/_posts/2014-03-24-week9.md
@@ -9,74 +9,45 @@ title: Week 9 (Mar 24-Mar 30) &mdash; Usability basics
 #####Key questions
 > What are some key principles of usability?
 
-> What are some usability challenges that library web sites often have?
+> What are some usability challenges faced by library web sites in particular?
 
 #####Assignment
 ######Required
-Read Krug, Ch. 1-3, 5, 7-9
+Read the Week 9 Overview (located in the Learn@UW content browser).
 
-http://librarian.newjackalmanac.ca/2013/08/user-experience-vs-world.html
-great, great application to a library context. personality. ties into Krug.
+Read:
 
-http://bradcolbow.com/archive/view/the_brads_why_drm_doesnt_work/?p=205
-(bad usability burns your reservoir of goodwill, and *you have competitors*.
-we no longer live in a world of information scarcity.)
+* Krug, Ch. 1-3, 5, 7-9
+* [User Experience vs. the World](http://librarian.newjackalmanac.ca/2013/08/user-experience-vs-world.html)
+* [Library Terms that Users Understand](http://escholarship.org/uc/item/3qq499w7)
+* [Catalog by Design](http://www.walkingpaper.org/5979)
+* Schmidt & Etches, Ch 1 (available online from [ALA TechSource](http://www.alatechsource.org/user-experience-ux-design-for-libraries-18))
 
-http://escholarship.org/uc/item/3qq499w7#page-2
-Terms library users understand - data!! SO much info on usability testing.
--> this is long and we need to ask people to extract key lessons from it.
+Answer the 3 discussion questions in the Week 9 forums.
 
-http://www.walkingpaper.org/5979
-redesigning the OPAC around use: things people want to do, rather than records
-of the collection
-
-Schmidt & Etches, Ch 1 (available http://www.alatechsource.org/user-experience-ux-design-for-libraries-18;
-also place on reserve)
+Keep these ideas in mind as you interact with whatever web sites you use every day.
 
 ######Optional
 The rest of Krug
 
-_The Design of Everyday Things_
-> A widely-cited classic that will change the way you see the world around you.
+_The Design of Everyday Things_  
+> If you didn't read it in week 3 - and maybe again, if you did.
 
 The rest of Schmidt & Etches
 
-make sure they know about Aaron's "The User Experience" column in LJ:
-http://lj.libraryjournal.com/category/opinion/aaron-schmidt/
+Aaron Schmidt writes a Library Journal column on usability, 
+[The User Experience](http://lj.libraryjournal.com/category/opinion/aaron-schmidt/)
 
-http://www.usability.gov/ likewise, only useful with some direction
+[http://www.usability.gov/](http://www.usability.gov/)  
+> Lots of useful tools.
 
-http://www.slideshare.net/whitneyhess/diy-ux overview of process
+[Whitney Hess's DIY UX talk](http://www.slideshare.net/whitneyhess/diy-ux)  
+> An overview of the process of the process that you could use to improve
+> user experience.
 
-http://alistapart.com/article/designcancripple
-shows dramatic effect of small choices
+[Design Choices Can Cripple a Website](http://alistapart.com/article/designcancripple)  
+> An example of how small web design choices can have dramatic effects on task
+> completion.
 
-http://matthew.reidsrow.com/articles/16
-
-{% comment %}
-What are your goals for this week?
-Later: scenarios & personas; testing & tools; accessibility. So this week is not
-those things.
-"features are not benefits"
-
-The elements of user experience (garrett) - available?
-
-O'Reilly's Designing Interfaces - you know, I probably want it for myself, though
-it sounds too specific for this use
-
-Similarly for me: Set Phasers on Stun: And Other True Tales of Design, Technology, 
-and Human Error by Steven Casey
-
-have already had them read Schmidt & Etches, pp 60-71 (the sections on content audit and content workflow)
-
-http://nform.com/tradingcards/ (only useful if we're going to have people pick
-one and do something with it)
-
-http://www.usability.gov/ likewise, only useful with some direction
-
-http://www.slideshare.net/whitneyhess/diy-ux overview of process
-
-http://alistapart.com/article/designcancripple
-shows dramatic effect of small choices
-
-{% endcomment %}
+[Your Library Web Site Stinks And It's Your Fault](http://matthew.reidsrow.com/articles/16)  
+> Matthew Reidsma tells us how to make it better.
