--- a/_posts/2014-03-31-week10.md
+++ b/_posts/2014-03-31-week10.md
@@ -4,10 +4,71 @@ permalink: LIS_861_Spring_2014/week2.html
 title: Week 10 (Mar 31-Apr 6) &mdash; Scenarios &amp; personas
 ---
 <em>TBD</em>
-<!--
 #####Key questions
-#####To read/watch
-######Required
-######Optional
+> What's a persona?
+
+> What can personas help us achieve, and what problems can they help us avoid?
+
+> What are good and bad ways to come up with personas?
+
 #####Assignment
--->
+######Required
+Read:
+* Cooper, Ch. 9 (will be on course e-reserve soon)
+* [Audiences, Outcomes, and Determining User Needs](http://alistapart.com/article/audiences-outcomes-and-determining-user-needs)
+* [Digital Public Library of America personas](http://natehill.net/dplausecases/)  
+  and [scenarios](http://dp.la/wiki/Scenarios)
+* [Designing for 5 Types of E-Commerce Shoppers](http://www.nngroup.com/articles/ecommerce-shoppers/)
+* [Dark Patterns: Deception vs. Honesty in UI Design](http://alistapart.com/article/dark-patterns-deception-vs.-honesty-in-ui-design)
+
+Also read _any one of_ the following:
+* Nicol and O'English, _Rising Tide: Faculty Expectations of Library Websites_
+* [Designing Web Registration Processes for Kids](http://alistapart.com/article/designing-web-registration-forms-for-kids)
+* [Children's Websites: Usability Issues in Designing for Kids](http://www.nngroup.com/articles/childrens-websites-usability-issues/)
+* [Teenage Usability: Designing Teen-Targeted Websites](http://www.nngroup.com/articles/usability-of-websites-for-teenagers/)
+
+######Optional
+* [When to Use Which User Experience Research Methods](http://www.nngroup.com/articles/which-ux-research-methods/)
+
+> You probably won't be able to implement all of these methods, but you may find
+> it interesting to see how wide the options are, and think about what the
+> benefits and drawbacks of different methods are, in case you find yourself
+> needing to choose among them. The methods also illustrate a variety of ways
+> you might gather data for generating personas.
+
+{% comment %}
+Questions
+
+ideas...
+Who uses your web site? What do they want to do there? How do you know?
+How can you distill this knowledge into something that helps you make decisions?
+
+Questions:
+in your preferred library type,
+what distinct user categories can you identify? what do you THINK their
+different needs/wants/pain points might be? what are some web site elements
+you think would be beneficial in serving those needs?  how could you tell if 
+you're right?
+
+What are the benefits of personas?
+
+What are some things you could do to develop a high-quality persona? 
+
+What are potential risks if you rely on personas that aren't high-quality?
+
+Readings:
+Ethics. You'd better be sure you're not confusing what you want with what your
+users want.
+
+looking ahead to stakeholders: the things that they want aren't necessarily
+the things your users want: https://xkcd.com/773/
+
+embed in opening talk:
+http://web.archive.org/web/20100201105850/http://carsonified.com/blog/design/how-to-understand-your-users-with-personas/?replytocom=15788
+
+video!!
+
+It's really Ranganathan: all users their features. every feature its user.
+(or maybe 'workflows' is a better word...)
+
+{% endcomment %}
