--- a/_posts/2014-03-31-week10.md
+++ b/_posts/2014-03-31-week10.md
@@ -3,7 +3,6 @@ layout: default
 permalink: LIS_861_Spring_2014/week2.html
 title: Week 10 (Mar 31-Apr 6) &mdash; Scenarios &amp; personas
 ---
-<em>TBD</em>
 #####Key questions
 > What's a persona?
 
@@ -14,6 +13,7 @@ title: Week 10 (Mar 31-Apr 6) &mdash; Scenarios &amp; personas
 #####Assignment
 ######Required
 Read:
+* The Week 10 overview (in Learn@UW)
 * Cooper, Ch. 9 (will be on course e-reserve soon)
 * [Audiences, Outcomes, and Determining User Needs](http://alistapart.com/article/audiences-outcomes-and-determining-user-needs)
 * [Digital Public Library of America personas](http://natehill.net/dplausecases/)  
@@ -26,6 +26,8 @@ Also read _any one of_ the following:
 * [Designing Web Registration Processes for Kids](http://alistapart.com/article/designing-web-registration-forms-for-kids)
 * [Children's Websites: Usability Issues in Designing for Kids](http://www.nngroup.com/articles/childrens-websites-usability-issues/)
 * [Teenage Usability: Designing Teen-Targeted Websites](http://www.nngroup.com/articles/usability-of-websites-for-teenagers/)
+
+Then answer the Week 10 Discussion Forum questions.
 
 ######Optional
 * [When to Use Which User Experience Research Methods](http://www.nngroup.com/articles/which-ux-research-methods/)
